fixed css not working on firefox correctly

--- a/frontend/src/components/NotificationList/NotificationList.css
+++ b/frontend/src/components/NotificationList/NotificationList.css
@@ -14,3 +14,10 @@
     left: 50%;
     transform: translate(-50%, 0%);
 }
+
+/*css specific for firefox*/
+@-moz-document url-prefix() {
+    .notification-list {
+        transform: translate(-45%, 0%);
+    }
+}
