--- a/frontend/src/components/NotificationList/components/Notification/Notification.css
+++ b/frontend/src/components/NotificationList/components/Notification/Notification.css
@@ -16,6 +16,14 @@
     text-transform: capitalize;
 }
 
+@media (min-width: 576px) {
+    @-moz-document url-prefix() {
+        .notification-msg {
+            text-align: center;
+        }
+    }
+}
+
 .notification-msg::first-letter {
     text-transform: uppercase;
 }
